作业三响应式布局

--- a/zuoyesan.html
+++ b/zuoyesan.html
@@ -12,27 +12,46 @@
             width: 100%;
         }
         .top{
-            height: 50px;
+            min-height: 50px;
             background-color: #FF4C4F;
+            align-items: center;
+            display: flex;
         }
         .top .nr{
             height: 100%;
-            width: 1200px;
+            margin: 0 auto;
+            display: flex;
+            justify-content: space-between;
+        }
+        .nrnr{
+            flex-direction: column;
+        }
+        .nryounr{
+            flex-direction: column;
             margin: 0 auto;
         }
         .nr p{
-            float: left;
-            margin-top: 10px;
             color: #FEF0EF;
         }
         .nr a{
-            float: right;
             margin-right: 10px;
-            margin-top: 10px;
             color: #FEF0EF;
+            text-decoration: none;
+        }
+        .nryou{
+                display: none;
+            }
+        .btn{
+            display: block;
+            width: 60px;
+            height: 30px;
+            background-color: white;
+            font-size: 14px;
+            color: tomato;
+            border: none;
+            margin-right: 20px;
         }
         .zhong{
-            width: 1200px;
             margin: 0 auto;
         }
         .zhong h1{
@@ -48,47 +67,51 @@
         }
         .xhddy,.xhds{
             display: flex;
-            justify-content: space-between;
+            flex-wrap: wrap;
         }
         .dianying,.shu{
-            width: 22%;
-            height: 400px;
-            background-color: #FEF0EF;
+            height: 400px;          
             margin-top: 50px;
-            border: 1px solid red;
+        }
+        .dynr,.shunr{
+            height: 100%; 
+            width: 95%;
+            background-color: tomato;
         }
         .dianying:hover,.shu:hover{
             margin-top: 40px;
         }
-        img {
+        .dynr img,.shunr img {
             width: 100%;
             height: 90%;
-            padding: 2%;
+            padding: 4%;
             box-sizing: border-box;
         }
-        .dianying p,.shu p{
+        .dynr p,.shunr p{
             text-align: center;
+            font-size: 20px;
+            color: white;
         }
         .jieshao{
             width: 100%;
-            height: 200px;
-            padding-left: 10%;
-            padding-right: 10%;
+            padding: 0 10%;
             margin-top: 30px;
             box-sizing: border-box;
             background-color: #7F0012;
             display: flex;
+            flex-direction: column;
             justify-content: space-between;
             align-items: center;
             border-bottom: 2px solid #7F0025;
         }
         .jieshao p{
             color: white;
-            width: 600px;         
+            width: 300px;         
         }
         .jieshao img{
             width: 150px;
             height: 150px;
+            margin: 20px 0;
         }
         .foot{
             background-color: #7F0012;
@@ -100,56 +123,167 @@
         .foot p{
             color: white;
         }
+        @media screen and (min-width:300px){
+            .col-xs-12{
+                width: 100%;
+            }
+            .col-xs-6{
+                width: 50%;
+            }
+            .col-xs-4{
+                width: 33%;
+            }
+            .col-xs-3{
+                width: 24%;
+            }
+            .col-xs-2{
+                width: 16.67%;
+            }
+            .nr, .zhong{
+            width: 300px;
+        }
+        }
+        @media screen and (min-width:600px){
+            .col-sm-12{
+                width: 100%;
+            }
+            .col-sm-6{
+                width: 50%;
+            }
+            .col-sm-4{
+                width: 33%;
+            }
+            .col-sm-3{
+                width: 24%;
+            }
+            .col-sm-2{
+                width: 16.67%;
+            }
+            .nr, .zhong{
+            width: 600px;
+            }
+            .jieshao{
+                flex-direction: row;
+            }
+            .jieshao p{
+            width: 600px;         
+        }
+        }
+        @media screen and (min-width:900px){
+            .col-md-12{
+                width: 100%;
+            }
+            .col-md-6{
+                width: 50%;
+            }
+            .col-md-4{
+                width: 33%;
+            }
+            .col-md-3{
+                width: 24%;
+            }
+            .col-md-2{
+                width: 16.67%;
+            }
+            .nr,.zhong{
+            width: 900px;
+            }
+            .nryou{
+                display: flex!important;
+            }
+            .btn{
+                display: none;
+            }
+        }
+        @media screen and (min-width:1200px){
+            .col-mm-12{
+                width: 100%;
+            }
+            .col-mm-6{
+                width: 50%;
+            }
+            .col-mm-4{
+                width: 33%;
+            }
+            .col-mm-3{
+                width: 24%;
+            }
+            .col-mm-2{
+                width: 16.67%;
+            }
+            .nr, .zhong{
+            width: 1200px;
+        }
+        }
     </style>
 </head>
 <body>
     <div class="top">
         <div class="nr">
         <p>利其烨的实验三</p>
+        <div class="nryou">
         <a href="#">逛一圈</a>
         <a href="#">喜欢的书</a>
-        <a href="#">喜欢的电影</a>
+        <a href="#">喜欢的电影</a>  
+        </div>           
         </div>
+        <button class="btn">按钮</button>
     </div>
     <div class="zhong">
        <h1>喜欢的电影</h1>
     <hr>
     <div class="xhddy">
-        <div class="dianying">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-mm-3 dianying" >
+            <div class="dynr">
             <img src="./dianying.jpg" alt="">
             <p>海贼王</p>
+            </div>      
         </div>
-        <div class="dianying">
-            <img src="./dianying.jpg" alt="">
-            <p>海贼王</p>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-mm-3 dianying">
+            <div class="dynr">
+                <img src="./dianying.jpg" alt="">
+                <p>海贼王</p>
+                </div>
         </div>
-        <div class="dianying">
-            <img src="./dianying.jpg" alt="">
-            <p>海贼王</p>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-mm-3 dianying">
+            <div class="dynr">
+                <img src="./dianying.jpg" alt="">
+                <p>海贼王</p>
+                </div>
         </div>
-        <div class="dianying">
-            <img src="./dianying.jpg" alt="">
-            <p>海贼王</p>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-mm-3 dianying">
+            <div class="dynr">
+                <img src="./dianying.jpg" alt="">
+                <p>海贼王</p>
+                </div>
         </div>
     </div>
     <h1>喜欢的书</h1>
     <hr>
     <div class="xhds">
-        <div class="shu">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-mm-3 shu">
+            <div class="shunr">
             <img src="./shu.jpg" alt="">
-            <p>书</p>
+            <p>书</p>    
+            </div>           
         </div>
-        <div class="shu">
-            <img src="./shu.jpg" alt="">
-            <p>书</p>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-mm-3 shu">
+            <div class="shunr">
+                <img src="./shu.jpg" alt="">
+                <p>书</p>    
+                </div> 
         </div>
-        <div class="shu">
-            <img src="./shu.jpg" alt="">
-            <p>书</p>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-mm-3 shu">
+            <div class="shunr">
+                <img src="./shu.jpg" alt="">
+                <p>书</p>    
+                </div> 
         </div>
-        <div class="shu">
-            <img src="./shu.jpg" alt="">
-            <p>书</p>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-mm-3 shu">
+            <div class="shunr">
+                <img src="./shu.jpg" alt="">
+                <p>书</p>    
+                </div> 
         </div>
     </div> 
     </div>
@@ -161,5 +295,25 @@
     <div class="foot"> 
         <p>版权所有&copy;极客大叔</p>
     </div>
+
+    <script src='https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js'></script>
+    <script>
+        $(function(){
+            $('.btn').click(function(){
+                if($('.nr').hasClass('nrnr')){
+                    $('.nr').removeClass('nrnr'),
+                    $('.nryou').removeClass('nryounr'),
+                    $('.nryou').css('display','none'),  
+                    $('.nr a').css('margin-top','0')  
+                }else{
+                    $('.nr').addClass('nrnr'),
+                    $('.nryou').addClass('nryounr'),
+                    $('.nryou').css('display','flex'),
+                    $('.nr a').css('margin-top','10px')
+                }
+                
+            })
+        })
+    </script>
 </body>
 </html>
