--- a/qita/zuoyesan.html
+++ b/qita/zuoyesan.html
@@ -107,7 +107,8 @@
         }
         .jieshao p{
             color: white;
-            width: 300px;         
+            width: 300px;  
+            margin-top: 15px;       
         }
         .jieshao img{
             width: 150px;
@@ -116,7 +117,7 @@
         }
         .foot{
             background-color: #7F0012;
-            height: 40px;
+            height: 50px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -137,7 +138,8 @@
                 flex-direction: row;
             }
             .jieshao p{
-            width: 600px;         
+            width: 600px;  
+            margin-top: 0px;        
         }
         }
         @media screen and (min-width:900px){
