第二次提交响应式企业站

--- a/qiyezhan/guanyuwomen.html
+++ b/qiyezhan/guanyuwomen.html
@@ -163,20 +163,20 @@
         <div class="footer">
             <div class="footernr">
                 <div class="footyi">
-                <img src="./shu.png" alt="">
+                <img data-src="./shu.png" alt="" class="lazy">
                 <p>帆帆帆帆帆帆帆帆帆帆</p>
                 </div>
                 <div class="footyi">
-                    <img src="./shu.png" alt="">
+                    <img data-src="./shu.png" alt="" class="lazy">
                     <p>烦烦烦烦烦烦烦烦烦烦烦烦</p>
                 </div>
                 <div class="footyi">
-                    <img src="./shu.png" alt="">
+                    <img data-src="./shu.png" alt="" class="lazy">
                     <p>烦烦烦烦烦烦烦烦烦方法</p>
                 </div>
             </div>       
          <div class="footyier">
-            <img class="img1" src="./erweima.png" alt="">
+            <img class="img1 lazy" data-src="./erweima.png" alt="">
             <p>啊啊啊啊啊啊啊啊啊啊啊</p>
          </div>         
         </div>
