--- a/qiyezhan/xiangqing.html
+++ b/qiyezhan/xiangqing.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>详情</title>
-    <!-- 新 Bootstrap 核心 CSS 文件 -->
-<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"  crossorigin="anonymous"> -->
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="./xiangyingshi.css">
     <style>
@@ -26,8 +24,7 @@
         text-align: center;
     }
     .nrxq img{
-        width: 50%;
-        height: 60%;
+        width: 80%;
     }
     .nrxq p{
         margin-top: 10px;
@@ -129,20 +126,20 @@
         <div class="footer">
             <div class="footernr">
                 <div class="footyi">
-                <img src="./shu.png" alt="">
+                <img data-src="./shu.png" alt="" class="lazy">
                 <p>帆帆帆帆帆帆帆帆帆帆</p>
                 </div>
                 <div class="footyi">
-                    <img src="./shu.png" alt="">
+                    <img data-src="./shu.png" alt="" class="lazy">
                     <p>烦烦烦烦烦烦烦烦烦烦烦烦</p>
                 </div>
                 <div class="footyi">
-                    <img src="./shu.png" alt="">
+                    <img data-src="./shu.png" alt="" class="lazy">
                     <p>烦烦烦烦烦烦烦烦烦方法</p>
                 </div>
             </div>       
          <div class="footyier">
-            <img class="img1" src="./erweima.png" alt="">
+            <img class="img1 lazy" data-src="./erweima.png" alt="">
             <p>啊啊啊啊啊啊啊啊啊啊啊</p>
          </div>         
         </div>
@@ -157,12 +154,13 @@
       <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
       <script src="./btn.js"></script>
       <script>
-          axios.get(`https://lingqule.papamk.com/wp-json/w2w/v1/products/${window.location.search.split('=')[1]}`).then(function(res){
-              $(function(){               
+          axios.get(`https://www.fastmock.site/mock/968960dc8a67c508d7126e45a469f261/qiyezhan-api/qiyezhanxinwen?id=${window.location.search.split('=')[1]}`).then(function(res){
+              $(function(){         
                 var p = $(`
-                <img src="${res.data.images[0].src}" alt="">
-                   <p>${res.data.name}</p>
-                   <p>${res.data.date_created}</p>`);
+                <img src="${res.data.data.news.src}" alt="" class="lazy">
+                   <p>${res.data.data.news.title}</p>
+                   <p>${res.data.data.news.time}</p>
+                   <p>${res.data.data.news.content}</p>`);
                 $('.nrxq').append(p);    
         })
           })
