--- a/qiyezhan/shouye.html
+++ b/qiyezhan/shouye.html
@@ -5,7 +5,7 @@
     <title>海贼王首页</title>
 <!-- 新 Bootstrap 核心 CSS 文件 -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"  crossorigin="anonymous">
-<link rel="stylesheet" href="../qiyezhan/xiangyingshi.css">
+<link rel="stylesheet" href="./xiangyingshi.css">
 <style>
     *{
         margin: 0;
@@ -43,6 +43,29 @@
         width: 100px;
         height: 100px;
     }
+    .fwnr:hover img{
+        animation: dx 1s;
+    }
+    @keyframes dx{
+        0%{
+            transform: translateY(-1000px);
+        }
+        40%{
+            transform: translateY(0px);
+        }
+        60%{
+            transform: translateY(50px);
+        }
+        75%{
+            transform: translateY(0px);
+        }
+        90%{
+            transform: translateY(25px);
+        }
+        100%{
+            transform: translateY(0px);
+        }
+    }
     .fwnr p{
         text-align: center;
         font-size: 20px;
@@ -59,9 +82,21 @@
     }
     .yi:hover,.er:hover{
         background-color: #999999;
+        animation: xs 2s;
     }
     .yi img,.er img{
         width: 100%;
+    }
+    @keyframes xs{
+        0%{
+            transform: scale(1);
+        }
+        50%{
+            transform: scale(1.1);
+        }
+        100%{
+            transform: scale(1);
+        }
     }
     .yi .nr,.er .nr{
         width: 100%;
@@ -94,6 +129,7 @@
         display: flex;
         flex-wrap: wrap;
         width: 100%;
+        justify-content: space-between;
     }
     .xwdt .xwyi{
         padding: 20px 10px;
@@ -117,12 +153,13 @@
     .xwyi p{
         margin-top: 10px;
     }
-    @media screen and (min-width:300px){
+    @media screen and (max-width:600px){
         .topnr, .neirong, .footer{
         width: 300px;
+        background-color: red;
         }
     }
-    @media screen and (min-width:600px){
+    @media screen and (min-width:600px) and (max-width:900px){
         .topnr, .neirong, .footer{
         width: 600px;
         }
@@ -133,7 +170,7 @@
         width: 600px;         
     }
     }
-    @media screen and (min-width:900px){
+    @media screen and (min-width:900px) and (max-width:1200px){
         .topnr,.neirong, .footer{
         width: 900px;
         }
@@ -193,13 +230,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img data-src="./haizeiwang.jpeg" class="d-block w-100 lazy" alt="..." style="min-height:520px">
+            <img  data-src="./haizeiwang.jpeg" class="d-block w-100 lazy" alt="..." style="min-height:520px" >
           </div>
           <div class="carousel-item">
-            <img data-src="./haizeiwang.jpeg" class="d-block w-100 lazy" alt="..." style="min-height:520px">
+            <img  data-src="./haizeiwang.jpeg" class="d-block w-100 lazy" alt="..." style="min-height:520px" >
           </div>
           <div class="carousel-item">
-            <img data-src="./haizeiwang.jpeg" class="d-block w-100 lazy" alt="..." style="min-height:520px">
+            <img  data-src="./haizeiwang.jpeg" class="d-block w-100 lazy" alt="..." style="min-height:520px" >
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -215,19 +252,27 @@
         <h1>服务范围</h1>
         <div class="fwfw">
             <div class="fwnr col-xs-12 col-sm-6 col-md-4 col-mm-3">
-                <img data-src="./neirong.png" alt="" class="lazy">
+                <img	sizes="auto"  alt="" class="lazy" srcset="./kafei.jpg	600w,
+				./lufei.jpeg	1200w,
+				./shu.png	900w">
                 <p>新世界</p>
             </div>
             <div class="fwnr col-xs-12 col-sm-6 col-md-4 col-mm-3">
-                <img data-src="./neirong.png" alt="" class="lazy">
+                <img	sizes="auto"  alt="" class="lazy" srcset="./kafei.jpg	600w,
+				./lufei.jpeg	1200w,
+				./neirong.png	900w">
                 <p>新世界</p>
             </div>
             <div class="fwnr col-xs-12 col-sm-6 col-md-4 col-mm-3">
-                <img data-src="./neirong.png" alt="" class="lazy">
+                <img	sizes="auto"  alt="" class="lazy" srcset="./kafei.jpg	600w,
+				./lufei.jpeg	1200w,
+				./shu.png	900w">
                 <p>新世界</p>
             </div>
             <div class="fwnr col-xs-12 col-sm-6 col-md-4 col-mm-3">
-                <img data-src="./neirong.png" alt="" class="lazy">
+                <img	sizes="auto"  alt="" class="lazy" srcset="./kafei.jpg	600w,
+				./lufei.jpeg	1200w,
+				./shu.png	900w">
                 <p>新世界</p>
             </div>
         </div>
@@ -319,9 +364,39 @@
                 </div>
             </div>       
          <div class="footyier">
-            <img class="img1 lazy" data-src="./erweima.png" alt="">
+            <img class="img1 lazy" data-src="./erweima.png" alt="" data-bs-toggle="modal" data-bs-target="#exampleModal">
             <p>啊啊啊啊啊啊啊啊啊啊啊</p>
-         </div>         
+         </div>  
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <form>
+                <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Email地址</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                </div>
+                <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label">您想说的话</label>
+                <textarea type="password" class="form-control" id="exampleInputPassword1"></textarea>
+                </div>
+              </form>
+          
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" id="submit">提交</button>
+        </div>
+      </div>
+    </div>
+  </div>
+         
         </div>
           <hr>
           <p class="pyi">fffffffffffffffffffff</p>
@@ -331,21 +406,32 @@
       <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"  crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"  crossorigin="anonymous"></script>
       <script src="./btn.js"></script>
+      <script src="./lazysizes.js"></script>
+      <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
       <script>
-          const imgss = document.querySelectorAll('.lazy')
-          $(function(){
-              window.onresize = function(){
-                imgs.forEach(image=>{//forEach() 方法用于调用数组的每个元素，并将元素传递给回调函数。
-                    if(window.innerWidth<900){//innerheight 返回窗口的文档显示区的高度。
-                        const datasrc='./aisi.webp'
-                        image.setAttribute('src',datasrc)
-                    }else{
-                        const src = image.getAttribute('data-src')//getAttribute() 方法通过名称获取属性的值。
-                        image.setAttribute('src',src)
-                    }
-                })
-            }
-          })
+
+        let myModal = new bootstrap.Modal(document.getElementById('exampleModal'));
+
+
+        $("#submit").click(function(){
+        let email = $("#exampleInputEmail1").val();
+        let password = $("#exampleInputPassword1").val();
+        console.log(email,password);
+        axios({
+          url: 'https://rpthqmyc.lc-cn-n1-shared.com/1.1/classes/data',
+          method: 'post',
+          headers:{
+            'X-LC-Id': 'RpThQMycsXA3ejXhR3MKixmp-gzGzoHsz',
+            'X-LC-Key':"BJrbO4oYNy85ymYKBTuawJoO"
+          },
+          data: {
+            email: email,
+            message: password
+          }
+        })
+        myModal.hide();
+      })
+
       </script>
 </body>
 </html>
