--- a/qiyezhan/shouye.html
+++ b/qiyezhan/shouye.html
@@ -156,10 +156,9 @@
     @media screen and (max-width:600px){
         .topnr, .neirong, .footer{
         width: 300px;
-        background-color: red;
         }
     }
-    @media screen and (min-width:600px) and (max-width:900px){
+    @media screen and (min-width:600px){
         .topnr, .neirong, .footer{
         width: 600px;
         }
@@ -170,7 +169,7 @@
         width: 600px;         
     }
     }
-    @media screen and (min-width:900px) and (max-width:1200px){
+    @media screen and (min-width:900px){
         .topnr,.neirong, .footer{
         width: 900px;
         }
