--- a/qiyezhan/shouye.html
+++ b/qiyezhan/shouye.html
@@ -138,10 +138,13 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        transition: 1s;
     }
     .xwyi:hover{
         cursor: pointer;
         background-color: #D7D7D7;
+        border-radius: 15px;
+        border: blue 1px solid;
     }
     .xwyi img{
         width: 100%;
