--- a/qiyezhan/shouye.html
+++ b/qiyezhan/shouye.html
@@ -237,17 +237,17 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img   class="d-block w-100 lazyload" alt="..." style="min-height:520px" srcset="./haizeiwang600.jpg	600w,
+            <img data-src="./haizeiwang.jpeg"   class="d-block w-100 lazyload lazy" alt="..." style="min-height:520px" srcset="./haizeiwang600.jpg	600w,
             ./haizeiwang.jpeg	1200w,
             ./haizeiwang900.jpg	900w" sizes="auto">
           </div>
           <div class="carousel-item">
-            <img   class="d-block w-100 lazyload" alt="..." style="min-height:520px" srcset="./haizeiwang600.jpg	600w,
+            <img data-src="./haizeiwang.jpeg"   class="d-block w-100 lazyload lazy" alt="..." style="min-height:520px" srcset="./haizeiwang600.jpg	600w,
             ./haizeiwang.jpeg	1200w,
             ./haizeiwang900.jpg	900w"  sizes="auto">
           </div>
           <div class="carousel-item">
-            <img   class="d-block w-100 lazyload" alt="..." style="min-height:520px" srcset="./haizeiwang600.jpg	600w,
+            <img data-src="./haizeiwang.jpeg"   class="d-block w-100 lazyload lazy" alt="..." style="min-height:520px" srcset="./haizeiwang600.jpg	600w,
             ./haizeiwang.jpeg	1200w,
             ./haizeiwang900.jpg	900w"  sizes="auto">
           </div>
