--- a/qiyezhan/guanyuwomen.html
+++ b/qiyezhan/guanyuwomen.html
@@ -66,7 +66,7 @@
     }
 
     
-    @media screen and (min-width:300px){
+    @media screen and (max-width:600px){
         .topnr, .neirong, .footer{
         width: 300px;
         }
