--- a/qiyezhan/xiangqing.html
+++ b/qiyezhan/xiangqing.html
@@ -41,7 +41,7 @@
         display: flex;
     }
     
-    @media screen and (min-width:300px){
+    @media screen and (max-width:600px){
         .topnr, .neirong, .footer,.titleyi{
         width: 300px;
         }
