--- a/qiyezhan/xinwen.html
+++ b/qiyezhan/xinwen.html
@@ -93,7 +93,7 @@
         background-color: #666666;
     }
     
-    @media screen and (min-width:300px){
+    @media screen and (max-width:600px){
         .topnr, .neirong, .footer{
         width: 300px;
         }
